--- a/woorischool/CustomView/CustomInputView.xib
+++ b/woorischool/CustomView/CustomInputView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,9 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomInputView" customModule="우리스쿨" customModuleProvider="target">
             <connections>
-                <outlet property="emoImageView" destination="g0b-ui-Sxj" id="7xP-qq-yLn"/>
                 <outlet property="messageTextView" destination="6en-mT-Ujw" id="qWl-a3-MRS"/>
-                <outlet property="tempEmoView" destination="bDM-M8-2gX" id="gOv-Lf-bcQ"/>
                 <outlet property="textView" destination="6en-mT-Ujw" id="bir-3K-KzE"/>
                 <outlet property="textViewHeightConstraint" destination="SAw-DA-uph" id="Ewg-ds-t4E"/>
             </connections>
@@ -24,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OHk-op-xYY">
-                    <rect key="frame" x="0.0" y="312" width="375" height="1"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
                     <color key="backgroundColor" name="veryLightPink"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="uwb-Bx-IBp"/>
@@ -43,13 +41,13 @@
                     </connections>
                 </button>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOd-Lf-4A8" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                    <rect key="frame" x="54" y="321" width="309" height="42"/>
+                    <rect key="frame" x="54" y="9" width="309" height="354"/>
                     <subviews>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="always" bouncesZoom="NO" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6en-mT-Ujw">
-                            <rect key="frame" x="18" y="6" width="216" height="30"/>
+                            <rect key="frame" x="18" y="6" width="216" height="342"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="30" id="SAw-DA-uph"/>
+                                <constraint firstAttribute="height" priority="1" constant="30" id="SAw-DA-uph"/>
                             </constraints>
                             <color key="textColor" name="greyishBrown"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -59,7 +57,7 @@
                             </connections>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DCb-bs-l9w">
-                            <rect key="frame" x="242" y="11" width="25" height="25"/>
+                            <rect key="frame" x="242" y="323" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="25" id="3vn-5S-uLj"/>
                                 <constraint firstAttribute="height" constant="25" id="tMH-jI-w7x"/>
@@ -70,7 +68,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5J2-zt-Nxk">
-                            <rect key="frame" x="278" y="11" width="25" height="25"/>
+                            <rect key="frame" x="278" y="323" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="0fO-r2-yUW"/>
                                 <constraint firstAttribute="width" constant="25" id="lxZ-3y-9kj"/>
@@ -98,55 +96,14 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c5y-LI-TZd">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="312"/>
-                    <subviews>
-                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bDM-M8-2gX">
-                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="144"/>
-                            <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flame" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="g0b-ui-Sxj">
-                                    <rect key="frame" x="-60" y="11" width="120" height="120.5"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="120" id="3WO-nt-TMC"/>
-                                        <constraint firstAttribute="height" constant="120" id="a8u-Gz-vzr"/>
-                                    </constraints>
-                                </imageView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jhi-J9-sjG">
-                                    <rect key="frame" x="-39" y="0.0" width="39" height="39"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="39" id="0r9-1Z-V6L"/>
-                                        <constraint firstAttribute="height" constant="39" id="v9d-m8-PEj"/>
-                                    </constraints>
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <inset key="imageEdgeInsets" minX="12" minY="12" maxX="12" maxY="12"/>
-                                    <state key="normal" image="xIcon"/>
-                                    <connections>
-                                        <action selector="hideEmoviewEvent" destination="-1" eventType="touchUpInside" id="A4h-6F-kb6"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" name="black60"/>
-                            <constraints>
-                                <constraint firstItem="g0b-ui-Sxj" firstAttribute="centerX" secondItem="bDM-M8-2gX" secondAttribute="centerX" id="A3i-1B-5Ja"/>
-                                <constraint firstItem="jhi-J9-sjG" firstAttribute="top" secondItem="bDM-M8-2gX" secondAttribute="top" id="hIX-SL-bp3"/>
-                                <constraint firstAttribute="height" constant="144" id="iaJ-13-5CC"/>
-                                <constraint firstItem="g0b-ui-Sxj" firstAttribute="centerY" secondItem="bDM-M8-2gX" secondAttribute="centerY" id="rEF-xp-er9"/>
-                                <constraint firstAttribute="trailing" secondItem="jhi-J9-sjG" secondAttribute="trailing" id="w8t-1o-LQ7"/>
-                            </constraints>
-                        </view>
-                    </subviews>
-                </stackView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="OHk-op-xYY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="4eP-WN-mRk"/>
-                <constraint firstItem="OHk-op-xYY" firstAttribute="top" secondItem="c5y-LI-TZd" secondAttribute="bottom" id="6m9-7K-JIZ"/>
-                <constraint firstItem="c5y-LI-TZd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="7UM-AA-dsv"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="c5y-LI-TZd" secondAttribute="trailing" id="8Ob-u9-p3M"/>
+                <constraint firstItem="OHk-op-xYY" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="6da-Wd-85L"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="yzW-oh-8oX" secondAttribute="bottom" constant="14" id="FLh-HF-72Z"/>
                 <constraint firstItem="AOd-Lf-4A8" firstAttribute="top" secondItem="OHk-op-xYY" secondAttribute="bottom" constant="8" id="H9i-GO-Utu"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="AOd-Lf-4A8" secondAttribute="trailing" constant="12" id="OFI-Tn-5ne"/>
-                <constraint firstItem="c5y-LI-TZd" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="TLy-Qh-xXx"/>
                 <constraint firstAttribute="trailing" secondItem="OHk-op-xYY" secondAttribute="trailing" id="U11-Ue-ckI"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="AOd-Lf-4A8" secondAttribute="bottom" constant="8" identifier="testCostraint" id="XYD-Xo-ZT8"/>
                 <constraint firstItem="yzW-oh-8oX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="13" id="k3t-oC-CXr"/>
@@ -161,11 +118,6 @@
         <image name="camera" catalog="system" width="64" height="48"/>
         <image name="chatUpIcon" width="26" height="26"/>
         <image name="emoIcon" width="25" height="25"/>
-        <image name="flame" catalog="system" width="54" height="64"/>
-        <image name="xIcon" width="15" height="14"/>
-        <namedColor name="black60">
-            <color red="0.0" green="0.0" blue="0.0" alpha="0.60000002384185791" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="brownGrey">
             <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
