--- a/woorischool/Views/Global/ModalViews/ChattingViewController.xib
+++ b/woorischool/Views/Global/ModalViews/ChattingViewController.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,6 +14,8 @@
                 <outlet property="chatTableView" destination="hBB-j3-aVr" id="UcK-a7-N91"/>
                 <outlet property="customInputView" destination="Q4C-vN-2s6" id="p9b-HQ-XtZ"/>
                 <outlet property="customInputViewBottomConstraint" destination="cRa-Su-9bq" id="NmU-Om-PrY"/>
+                <outlet property="tempEmoImageView" destination="nX1-PO-Zl2" id="bJV-XQ-vyO"/>
+                <outlet property="tempEmoView" destination="9Ah-kY-ur6" id="6Jm-bA-YEB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,6 +33,35 @@
                         <outlet property="delegate" destination="-1" id="oFt-0a-Bvi"/>
                     </connections>
                 </tableView>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Ah-kY-ur6">
+                    <rect key="frame" x="0.0" y="658" width="414" height="144"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nX1-PO-Zl2">
+                            <rect key="frame" x="260.5" y="22" width="100" height="100"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="100" id="64B-1Y-V6k"/>
+                                <constraint firstAttribute="width" constant="100" id="dBy-O1-gJU"/>
+                            </constraints>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cSm-OH-njK">
+                            <rect key="frame" x="364" y="0.0" width="50" height="48"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                            <state key="normal" image="xIcon"/>
+                            <connections>
+                                <action selector="hideTempEmoView" destination="-1" eventType="touchUpInside" id="JnD-Jg-x9X"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" name="black60"/>
+                    <constraints>
+                        <constraint firstItem="nX1-PO-Zl2" firstAttribute="centerY" secondItem="9Ah-kY-ur6" secondAttribute="centerY" id="0Tv-xD-bg4"/>
+                        <constraint firstItem="cSm-OH-njK" firstAttribute="top" secondItem="9Ah-kY-ur6" secondAttribute="top" id="BrR-FM-yNp"/>
+                        <constraint firstItem="nX1-PO-Zl2" firstAttribute="centerX" secondItem="9Ah-kY-ur6" secondAttribute="centerX" multiplier="150%" id="kCy-XX-7aB"/>
+                        <constraint firstAttribute="height" constant="144" id="rQY-WL-eA5"/>
+                        <constraint firstAttribute="trailing" secondItem="cSm-OH-njK" secondAttribute="trailing" id="u6o-Ae-vev"/>
+                    </constraints>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q4C-vN-2s6" customClass="CustomInputView" customModule="우리스쿨" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="802" width="414" height="60"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -42,14 +74,23 @@
             <constraints>
                 <constraint firstItem="Q4C-vN-2s6" firstAttribute="top" secondItem="hBB-j3-aVr" secondAttribute="bottom" id="2II-9r-1xw"/>
                 <constraint firstItem="hBB-j3-aVr" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="FuK-PG-NOp"/>
+                <constraint firstItem="Q4C-vN-2s6" firstAttribute="top" secondItem="9Ah-kY-ur6" secondAttribute="bottom" id="LUh-h8-xeT"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="hBB-j3-aVr" secondAttribute="trailing" id="Ufl-6j-Xmr"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Q4C-vN-2s6" secondAttribute="trailing" id="WR7-0a-OJd"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="9Ah-kY-ur6" secondAttribute="trailing" id="ZVb-Qq-9XY"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Q4C-vN-2s6" secondAttribute="bottom" id="cRa-Su-9bq"/>
                 <constraint firstItem="Q4C-vN-2s6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="dJi-gr-8me"/>
+                <constraint firstItem="9Ah-kY-ur6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="l61-8G-YDz"/>
                 <constraint firstItem="hBB-j3-aVr" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="x0T-A2-ruO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="93.75"/>
         </view>
     </objects>
+    <resources>
+        <image name="xIcon" width="15" height="14"/>
+        <namedColor name="black60">
+            <color red="0.0" green="0.0" blue="0.0" alpha="0.60000002384185791" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
